Bug: CSS z-index fixed for examination search box

--- a/css/style_oe3.0.css
+++ b/css/style_oe3.0.css
@@ -6604,7 +6604,7 @@ ul.management-summaries li h6 {
 }
 
 .search-in-event {
-  z-index: 75;
+  z-index: 65;
   position: fixed;
   top: 98px;
   left: 200px;
